--- a/index.html
+++ b/index.html
@@ -9,45 +9,59 @@
   </head>
   <body>
     
-    <div class="container">
+    <div class="index0">
+      <div class="blck1"></div>
+      <div class="blck2"></div>
+      <div class="blck3"></div>
+      <div class="blck4"></div>
+      <div class="blck5"></div>
+    </div>
+    <div class="container-fluid index1">
       <div class="row">
         <div class="header">
           <div>
             <ul class="navbar">
               <li>
-                <a href="#">About</a>
+                <a class="navbar-item" href="#">About</a>
               </li>
               <li>
-                <a href="#">City control</a>
+                <a class="navbar-item" href="#">City control</a>
               </li>
               <li>
-                <a href="#">Timely problem solving</a>
+                <a class="navbar-item" href="#">Timely problem solving</a>
               </li>
               <li>
-                <a href="#">Team work</a>
+                <a class="navbar-item" href="#">Team work</a>
+              </li>
+              <li>
+                <a class="navbar-item" href="#">Contacts</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row block1">
         <div class="col">
-          <div class="smart-logo"></div>         
-          <h1>Smart Commune</h1>
-          <p>This is a unique system designed to improve the quality of citizen’s life and 
+          <div class="img smart-logo"></div>         
+          <h1 class="blockTop-h1 fc-white">Smart Commune</h1>
+          <p class="blockTop-p fc-white">This is a unique system designed to improve the quality of citizen’s life and 
             improve the look of the city thanks to the active participation of citizens and 
             their interaction with the local government.</p>          
-          <a href="#">
-            <span>DOWNLOAD APP</span>
+          <a class="button" href="#">
+            <span class="txt-btn">DOWNLOAD APP</span>
           </a>
         </div>
-        <div class="col">[peoplecity]</div>
-      </div>
-      <div class="row">
-        <div class="col">[2mob]</div>
         <div class="col">
-          <h2>City control</h2>
-          <p>Smart Commune allows controlling city infrastructure like condition of roads, 
+          <div class="img peoples-n-city"></div>
+        </div>
+      </div>
+      <div class="row block2">
+        <div class="col">
+          <div class="img mob-block-2"></div>
+        </div>
+        <div class="col">
+          <h2 class="blockMjr-h2 fc-blue">City control</h2>
+          <p class="blockMjr-p fc-blue">Smart Commune allows controlling city infrastructure like condition of roads, 
             parking, transport, street cleaning, lighting, landscaping, wild animal’s 
             problem, vandalism, education, citizen’s safety and much more. In case of the 
             emergency incident with a user or people nearby, Smart Commune has an emergency 
@@ -55,29 +69,33 @@
             service.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row block3">
         <div class="col">
-          <h2>Timely problem solving</h2>
-          <p>Citizen’s helps local government resolve timely troubleshoot. Effective 
+          <h2 class="blockMjr-h2 fc-blue">Timely problem solving</h2>
+          <p class="blockMjr-p fc-blue">Citizen’s helps local government resolve timely troubleshoot. Effective 
             communication between citizen’s and local government allows citizen’s timely 
             reporting about city problems, and helps government solve problems important 
             to citizen’s.</p>
         </div>
-        <div class="col">[2mob]</div>
-      </div>
-      <div class="row">
-        <div class="col">[peoplepath]</div>
         <div class="col">
-          <h2>Team work</h2>
-          <p>Our main goals make communication between local government and citizen’s 
+          <div class="img mob-block-3"></div>
+        </div>
+      </div>
+      <div class="row block4">
+        <div class="col">
+          <div class="img peoples-n-path"></div>
+        </div>
+        <div class="col">
+          <h2 class="blockMjr-h2 fc-white">Team work</h2>
+          <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
             easy and make life better. We want to make global safe and high standard 
             of living.</p>
-          <a href="#">
-            <span>CONTACT US</span>
+          <a class="button" href="#">
+            <span class="txt-btn">CONTACT US</span>
           </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row block5">
         <div class="col">[contacts]</div>
         <div class="col">[form]</div>
       </div>
