--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="blck4"></div>
       <div class="blck5"></div>
     </div>
-    <div class="container-fluid index1">
+    <div class="container-fluid index999">
       <div class="row">
         <div class="header">
           <div>
@@ -96,8 +96,52 @@
         </div>
       </div>
       <div class="row block5">
-        <div class="col">[contacts]</div>
-        <div class="col">[form]</div>
+        <div class="col">
+          <div class="conts-adrs">
+            <a class="conts-city fc-blue" href="#">Moscow</a>
+            <a class="conts-city fc-blue curr-sity" href="#">Samara</a>
+            <a class="conts-city fc-blue" href="#">Toliatti</a>
+            <a class="conts-city fc-blue" href="#">Penza</a>
+          </div>
+          <div class="contacts conts-city-msk">
+            <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
+            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+            <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
+          </div>
+          <div class="contacts conts-city-smr curr-conts">
+            <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
+            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+            <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
+          </div>
+          <div class="contacts conts-city-tlt">
+            <p class="conts-txt fc-blue">445004, Tolyatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
+            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+            <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+          </div>
+          <div class="contacts conts-city-pnz">
+            <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
+            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+            <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+          </div>
+          <div class="altarx-logo img"></div>
+        </div>
+        <div class="col">
+          <form class="form" action="">           
+            <div>
+              <input class="input" type="text" placeholder="Name">
+            </div>            
+            <div>
+              <input class="input" type="text" placeholder="Email">
+            </div>            
+            <div>
+              <input class="input" type="text" placeholder="Phone number">
+            </div>            
+            <div>
+              <textarea class="textarea" name="" id="" cols="30" rows="2" placeholder="Message"></textarea>
+            </div>
+            <input class="submit" type="submit" value="SEND MESSAGE">            
+          </form>
+        </div>
       </div>
     </div>
       
