--- a/index.html
+++ b/index.html
@@ -60,22 +60,28 @@
           <div class="img mob-block-2"></div>
         </div>
         <div class="col">
-          <h2 class="blockMjr-h2 fc-blue">City control</h2>
-          <p class="blockMjr-p fc-blue">Smart Commune allows controlling city infrastructure like condition of roads, 
-            parking, transport, street cleaning, lighting, landscaping, wild animal’s 
-            problem, vandalism, education, citizen’s safety and much more. In case of the 
-            emergency incident with a user or people nearby, Smart Commune has an emergency 
-            response function. System sends user's coordinates to the nearest rescue 
-            service.</p>
+          <div class="block-contain">
+            <h2 class="blockMjr-h2 fc-blue">City control</h2>
+            <p class="blockMjr-p fc-blue">Smart Commune allows controlling city infrastructure like condition of roads, 
+              parking, transport, street cleaning, lighting, landscaping, wild animal’s 
+              problem, vandalism, education, citizen’s safety and much more. In case of the 
+              emergency incident with a user or people nearby, Smart Commune has an emergency 
+              response function. System sends user's coordinates to the nearest rescue 
+              service.
+            </p>
+          </div>
         </div>
       </div>
       <div class="row block3">
         <div class="col">
-          <h2 class="blockMjr-h2 fc-blue">Timely problem solving</h2>
-          <p class="blockMjr-p fc-blue">Citizen’s helps local government resolve timely troubleshoot. Effective 
-            communication between citizen’s and local government allows citizen’s timely 
-            reporting about city problems, and helps government solve problems important 
-            to citizen’s.</p>
+          <div class="block-contain">
+            <h2 class="blockMjr-h2 fc-blue">Timely problem solving</h2>
+            <p class="blockMjr-p fc-blue">Citizen’s helps local government resolve timely troubleshoot. Effective 
+              communication between citizen’s and local government allows citizen’s timely 
+              reporting about city problems, and helps government solve problems important 
+              to citizen’s.
+            </p>
+          </div>
         </div>
         <div class="col">
           <div class="img mob-block-3"></div>
@@ -86,44 +92,48 @@
           <div class="img peoples-n-path"></div>
         </div>
         <div class="col">
-          <h2 class="blockMjr-h2 fc-white">Team work</h2>
-          <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
-            easy and make life better. We want to make global safe and high standard 
-            of living.</p>
-          <a class="button" href="#">
-            <span class="txt-btn">CONTACT US</span>
-          </a>
+          <div class="block-contain">
+            <h2 class="blockMjr-h2 fc-white">Team work</h2>
+            <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
+              easy and make life better. We want to make global safe and high standard 
+              of living.</p>
+            <a class="button" href="#">
+              <span class="txt-btn">CONTACT US</span>
+            </a>
+          </div>
         </div>
       </div>
       <div class="row block5">
         <div class="col">
-          <div class="conts-adrs">
-            <a class="conts-city fc-blue" href="#">Moscow</a>
-            <a class="conts-city fc-blue curr-sity" href="#">Samara</a>
-            <a class="conts-city fc-blue" href="#">Toliatti</a>
-            <a class="conts-city fc-blue" href="#">Penza</a>
+          <div class="block-contain">
+            <div class="conts-adrs">
+              <a class="conts-city fc-blue" href="#">Moscow</a>
+              <a class="conts-city fc-blue curr-sity" href="#">Samara</a>
+              <a class="conts-city fc-blue" href="#">Toliatti</a>
+              <a class="conts-city fc-blue" href="#">Penza</a>
+            </div>
+            <div class="contacts conts-city-msk">
+              <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
+              <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+              <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
+            </div>
+            <div class="contacts conts-city-smr curr-conts">
+              <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
+              <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+              <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
+            </div>
+            <div class="contacts conts-city-tlt">
+              <p class="conts-txt fc-blue">445004, Tolyatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
+              <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+              <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+            </div>
+            <div class="contacts conts-city-pnz">
+              <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
+              <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+              <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+            </div>
+            <div class="altarx-logo img"></div>
           </div>
-          <div class="contacts conts-city-msk">
-            <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
-            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-            <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
-          </div>
-          <div class="contacts conts-city-smr curr-conts">
-            <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
-            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-            <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
-          </div>
-          <div class="contacts conts-city-tlt">
-            <p class="conts-txt fc-blue">445004, Tolyatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
-            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-            <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
-          </div>
-          <div class="contacts conts-city-pnz">
-            <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
-            <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-            <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
-          </div>
-          <div class="altarx-logo img"></div>
         </div>
         <div class="col">
           <form class="form" action="">           
