--- a/index.html
+++ b/index.html
@@ -8,58 +8,56 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Smart Commune</title>
   </head>
-  <body>   
-    <div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <div>
-              <ul class="navbar">
-                <li>
-                  <a class="navbar-item" href="#">About</a>
-                </li>
-                <li>
-                  <a class="navbar-item" href="#">City control</a>
-                </li>
-                <li>
-                  <a class="navbar-item" href="#">Timely problem solving</a>
-                </li>
-                <li>
-                  <a class="navbar-item" href="#">Team work</a>
-                </li>
-                <li>
-                  <a class="navbar-item" href="#">Contacts</a>
-                </li>
-              </ul>
+  <body>    
+    <div class="block1 bckg-img">
+      <div class="peoples-n-city">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <div>
+                <ul class="navbar">
+                  <li>
+                    <a class="navbar-item" href="#">About</a>
+                  </li>
+                  <li>
+                    <a class="navbar-item" href="#">City control</a>
+                  </li>
+                  <li>
+                    <a class="navbar-item" href="#">Timely problem solving</a>
+                  </li>
+                  <li>
+                    <a class="navbar-item" href="#">Team work</a>
+                  </li>
+                  <li>
+                    <a class="navbar-item" href="#">Contacts</a>
+                  </li>
+                </ul>
+              </div>
             </div>
+          </div>
+        </div>    
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="head">
+                <div class="img smart-logo"></div>         
+                <h1 class="blockTop-h1 fc-white">Smart Commune</h1>
+                <p class="blockTop-p fc-white">This is a unique system designed to improve the quality of citizen’s life and 
+                  improve the look of the city thanks to the active participation of citizens and 
+                  their interaction with the local government.</p>          
+                <a class="button" href="#">
+                  <span class="txt-btn">DOWNLOAD APP</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-6"></div>
           </div>
         </div>
       </div>
-    </div>
-    <div>
+    </div>    
+    <div class="block2 bckg-img">      
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
-            <div class="head">
-              <div class="img smart-logo"></div>         
-              <h1 class="blockTop-h1 fc-white">Smart Commune</h1>
-              <p class="blockTop-p fc-white">This is a unique system designed to improve the quality of citizen’s life and 
-                improve the look of the city thanks to the active participation of citizens and 
-                their interaction with the local government.</p>          
-              <a class="button" href="#">
-                <span class="txt-btn">DOWNLOAD APP</span>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="img peoples-n-city"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div class="container-fluid">
-        <div class="row mt-bl2">
           <div class="col-lg-6">
             <div class="img mob-block-2"></div>
           </div>
@@ -76,11 +74,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>     
     </div>
-    <div>
+    <div class="block3 bckg-img">
       <div class="container-fluid">
-        <div class="row mt-bl3">
+        <div class="row">
           <div class="col-lg-6">
             <div class="block-contain">
               <h2 class="blockMjr-h2 fc-blue">Timely problem solving</h2>
@@ -97,79 +95,79 @@
         </div>
       </div>
     </div>
-    <div>
-      <div class="container-fluid">
-        <div class="row mt-bl4">
-          <div class="col-lg-6">
-            <div class="img peoples-n-path"></div>
-          </div>
-          <div class="col-lg-6">
-            <div class="block-contain">
-              <h2 class="blockMjr-h2 fc-white">Team work</h2>
-              <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
-                easy and make life better. We want to make global safe and high standard 
-                of living.</p>
-              <a class="button" href="#">
-                <span class="txt-btn">CONTACT US</span>
-              </a>
+    <div class="block4 bckg-img">
+      <div class="peoples-n-path">
+        <div class="block5 bckg-img">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6"></div>
+              <div class="col-lg-6">
+                <div class="block-contain">
+                  <h2 class="blockMjr-h2 fc-white">Team work</h2>
+                  <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
+                    easy and make life better. We want to make global safe and high standard 
+                    of living.</p>
+                  <a class="button" href="#">
+                    <span class="txt-btn">CONTACT US</span>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
+          <div class="container-fluid mt-blck5">   
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="block-contain">
+                  <div class="conts-adrs">
+                    <a class="conts-city fc-blue" href="#">Moscow</a>
+                    <a class="conts-city fc-blue curr-sity" href="#">Samara</a>
+                    <a class="conts-city fc-blue" href="#">Togliatti</a>
+                    <a class="conts-city fc-blue" href="#">Penza</a>
+                  </div>
+                  <div class="contacts conts-city-msk">
+                    <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
+                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
+                  </div>
+                  <div class="contacts conts-city-smr curr-conts">
+                    <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
+                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
+                  </div>
+                  <div class="contacts conts-city-tlt">
+                    <p class="conts-txt fc-blue">445004, Togliatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
+                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+                  </div>
+                  <div class="contacts conts-city-pnz">
+                    <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
+                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+                  </div>
+                  <div class="altarx-logo img"></div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <form class="form" action="">           
+                  <div>
+                    <input class="input" type="text" placeholder="Name">
+                  </div>            
+                  <div>
+                    <input class="input" type="text" placeholder="Email">
+                  </div>            
+                  <div>
+                    <input class="input" type="text" placeholder="Phone number">
+                  </div>            
+                  <div>
+                    <textarea class="textarea" name="" id="" cols="30" rows="2" placeholder="Message"></textarea>
+                  </div>
+                  <input class="submit" type="submit" value="SEND MESSAGE">            
+                </form>
+              </div>
+            </div>
+          </div>  
         </div>
       </div>
     </div>
-    <div>
-      <div class="container-fluid">   
-        <div class="row mt-bl5">
-          <div class="col-lg-6">
-            <div class="block-contain">
-              <div class="conts-adrs">
-                <a class="conts-city fc-blue" href="#">Moscow</a>
-                <a class="conts-city fc-blue curr-sity" href="#">Samara</a>
-                <a class="conts-city fc-blue" href="#">Togliatti</a>
-                <a class="conts-city fc-blue" href="#">Penza</a>
-              </div>
-              <div class="contacts conts-city-msk">
-                <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
-                <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
-              </div>
-              <div class="contacts conts-city-smr curr-conts">
-                <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
-                <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
-              </div>
-              <div class="contacts conts-city-tlt">
-                <p class="conts-txt fc-blue">445004, Togliatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
-                <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
-              </div>
-              <div class="contacts conts-city-pnz">
-                <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
-                <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
-              </div>
-              <div class="altarx-logo img"></div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <form class="form" action="">           
-              <div>
-                <input class="input" type="text" placeholder="Name">
-              </div>            
-              <div>
-                <input class="input" type="text" placeholder="Email">
-              </div>            
-              <div>
-                <input class="input" type="text" placeholder="Phone number">
-              </div>            
-              <div>
-                <textarea class="textarea" name="" id="" cols="30" rows="2" placeholder="Message"></textarea>
-              </div>
-              <input class="submit" type="submit" value="SEND MESSAGE">            
-            </form>
-          </div>
-        </div>
-      </div>    
-    </div>    
   </body>
 </html>
