--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
               <div>
                 <ul class="navbar">
                   <li>
-                    <a class="navbar-item" href="#">About</a>
+                    <a class="navbar-item" href="#about">About</a>
                   </li>
                   <li>
-                    <a class="navbar-item" href="#">City control</a>
+                    <a class="navbar-item" href="#control">City control</a>
                   </li>
                   <li>
-                    <a class="navbar-item" href="#">Timely problem solving</a>
+                    <a class="navbar-item" href="#solving">Timely problem solving</a>
                   </li>
                   <li>
-                    <a class="navbar-item" href="#">Team work</a>
+                    <a class="navbar-item" href="#teamwork">Team work</a>
                   </li>
                   <li>
-                    <a class="navbar-item" href="#">Contacts</a>
+                    <a class="navbar-item" href="#conts">Contacts</a>
                   </li>
                 </ul>
               </div>
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>    
-    <div class="block2 bckg-img">      
+    <div id="control" class="block2 bckg-img">      
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
@@ -76,7 +76,7 @@
         </div>
       </div>     
     </div>
-    <div class="block3 bckg-img">
+    <div id="solving" class="block3 bckg-img">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-    <div class="block4 bckg-img">
+    <div id="teamwork" class="block4 bckg-img">
       <div class="peoples-n-path">
         <div class="block5 bckg-img">
           <div class="container-fluid">
@@ -114,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="container-fluid mt-blck5">   
+          <div id="conts" class="container-fluid mt-blck5">   
             <div class="row">
               <div class="col-lg-6">
                 <div class="block-contain">
