--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
       <div class="peoples-n-city">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xl-12">
               <div>
                 <ul class="navbar">
-                  <li>
-                    <a class="navbar-item" href="#about">About</a>
-                  </li>
                   <li>
                     <a class="navbar-item" href="#control">City control</a>
                   </li>
@@ -32,13 +29,14 @@
                     <a class="navbar-item" href="#conts">Contacts</a>
                   </li>
                 </ul>
+                <div class="burger"></div>
               </div>
             </div>
           </div>
         </div>    
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-xl-6 col-lg-6 col-md-8 col-12">
               <div class="head">
                 <div class="img smart-logo"></div>         
                 <h1 class="blockTop-h1 fc-white">Smart Commune</h1>
@@ -50,7 +48,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-6"></div>
+            <div class="col-xl-6"></div>
           </div>
         </div>
       </div>
@@ -58,10 +56,10 @@
     <div id="control" class="block2 bckg-img">      
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-6 col-md-12 order-resp2">
             <div class="img mob-block-2"></div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-6 col-md-12 order-resp1">
             <div class="block-contain">
               <h2 class="blockMjr-h2 fc-blue">City control</h2>
               <p class="blockMjr-p fc-blue">Smart Commune allows controlling city infrastructure like condition of roads, 
@@ -79,7 +77,7 @@
     <div id="solving" class="block3 bckg-img">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-6 col-md-12">
             <div class="block-contain">
               <h2 class="blockMjr-h2 fc-blue">Timely problem solving</h2>
               <p class="blockMjr-p fc-blue">Citizen’s helps local government resolve timely troubleshoot. Effective 
@@ -89,7 +87,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-6 col-md-12">
             <div class="img mob-block-3"></div>
           </div>
         </div>
@@ -100,8 +98,8 @@
         <div class="block5 bckg-img">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-lg-6"></div>
-              <div class="col-lg-6">
+              <div class="col-xl-6 col-lg-6"></div>
+              <div class="col-xl-6 col-lg-6 col-md-12 order-resp1">
                 <div class="block-contain">
                   <h2 class="blockMjr-h2 fc-white">Team work</h2>
                   <p class="blockMjr-p fc-white">Our main goals make communication between local government and citizen’s 
@@ -116,7 +114,7 @@
           </div>
           <div id="conts" class="container-fluid mt-blck5">   
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-xl-6 col-lg-12 col-md-12">
                 <div class="block-contain">
                   <div class="conts-adrs">
                     <a class="conts-city fc-blue" href="#">Moscow</a>
@@ -147,7 +145,7 @@
                   <div class="altarx-logo img"></div>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-xl-6 col-lg-12 col-md-12">
                 <form class="form" action="">           
                   <div>
                     <input class="input" type="text" placeholder="Name">
