--- a/index.html
+++ b/index.html
@@ -123,26 +123,45 @@
                     <a class="conts-city fc-blue" href="#">Penza</a>
                   </div>
                   <div class="contacts conts-city-msk">
-                    <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
-                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                    <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue">129226, Moscow,<br>st. Dokukina, 8</p>
+                      <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    </div>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue fw-b">+7 (495) 783-11-58</p>
+                      <div class="altarx-logo img"></div>
+                    </div>
                   </div>
                   <div class="contacts conts-city-smr curr-conts">
-                    <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
-                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                    <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue">443068, Samara,<br>Lenina Prospect, 25<br>BC "Zvezda"</p>
+                      <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    </div>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue fw-b">+7 (846) 206-05-55</p>
+                      <div class="altarx-logo img"></div>
+                    </div>
                   </div>
                   <div class="contacts conts-city-tlt">
-                    <p class="conts-txt fc-blue">445004, Togliatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
-                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                    <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue">445004, Togliatti,<br>st. Malachitovaya, 3<br>BC "Belyi Dom"</p>
+                      <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    </div>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+                      <div class="altarx-logo img"></div>
+                    </div>
                   </div>
                   <div class="contacts conts-city-pnz">
-                    <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
-                    <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
-                    <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
-                  </div>
-                  <div class="altarx-logo img"></div>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue">440052, Penza,<br>Sverdlov street, 2i<br>office 518</p>
+                      <p class="conts-txt fc-blue">contact@altarix.ru<br>hr@altarix.ru</p>
+                    </div>
+                    <div class="mob-str">
+                      <p class="conts-txt fc-blue fw-b">+7 (846) 242-75-77</p>
+                      <div class="altarx-logo img"></div>
+                    </div>
+                  </div>                  
                 </div>
               </div>
               <div class="col-xl-6 col-lg-12 col-md-12">
